openshift-ngnix-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: ngnix-statefulset
  namespace: shared-volume
  labels:
    app: ngnix
spec:
  selector:
    matchLabels:
      app: ngnix
  updateStrategy:
    type: RollingUpdate
  replicas: 2
  template:
    metadata:
      labels:
        app: ngnix
    spec:
      containers:
      - name: ngnix
        image: twalter/openshift-nginx:stable
        ports:
        - containerPort: 80
        resources:
          limits:
            memory: 256Mi
            cpu: "250m"
          requests:
            memory: 128Mi
            cpu: "80m"
        volumeMounts:
        - name: shared-pvc
          mountPath: /shared-volume
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop: ["ALL"]
          runAsNonRoot: true
          seccompProfile:
            type: RuntimeDefault # Localhost
  volumeClaimTemplates:
  - metadata:
      name: shared-pvc
    spec:
      accessModes: [ "ReadWriteMany" ]
      resources:
        requests:
          storage: 1Gi
      storageClassName: portworx-shared-gp3
---
apiVersion: v1
kind: Service
metadata:
  name: ngnix-service
  namespace: shared-volume
spec:
  selector:
    app: ngnix
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8081
      name: http
  type: ClusterIP
  sessionAffinity: None
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: ngnix-route
  namespace: shared-volume
spec:
  selector:
    app: ngnix
  #host: api.aug.cp.fyre.ibm.com
  port:
    targetPort: 8081
  #tls:
    #insecureEdgeTerminationPolicy: Redirect
    #termination: edge
  #path: /ngnix
  to:
    kind: Service
    name: ngnix-service
    weight: 100
  wildcardPolicy: None
parameters:
- name: NAME
  description: The name for the deployment, service and route
  value: nginx
- name: NGINX_VERSION
  description: The version (tag) of the used nginx image
  value: latest
